# stream_deck

./: .gitignore  Cargo.toml
.run/: Build plugin_test.run.xml  Clippy.run.xml  Reload plugin.run.xml  Stop plugin.run.xml
plugin_test/: Cargo.toml
plugin_test/src/: main.rs
src/: common.rs  error.rs  lib.rs  localization.rs
src/events/: mod.rs
src/events/received/: mod.rs
src/events/received/common/: did_receive_global_settings.rs  did_receive_settings.rs  mod.rs
src/events/received/plugin/: application_did_launch.rs  application_did_terminate.rs  device_did_connect.rs  device_did_disconnect.rs  dial_down.rs  dial_rotate.rs  dial_up.rs  did_receive_deep_link.rs  key_down.rs  key_up.rs  mod.rs  property_inspector_did_appear.rs  property_inspector_did_disappear.rs  send_to_plugin.rs  system_did_wake_up.rs  title_parameters_did_change.rs  touch_tap.rs  will_appear.rs  will_disappear.rs
src/events/received/property_inspector/: mod.rs  send_to_property_inspector.rs
src/events/sent/: mod.rs
src/events/sent/common/: get_global_settings.rs  get_settings.rs  log_message.rs  mod.rs  open_url.rs  set_global_settings.rs  set_settings.rs
src/events/sent/plugin/: mod.rs  send_to_property_inspector.rs  set_feedback.rs  set_feedback_layout.rs  set_image.rs  set_state.rs  set_title.rs  show_alert.rs  show_ok.rs  switch_to_profile.rs
src/manifest/: applications_to_monitor.rs  mod.rs  os.rs  profile.rs  software.rs
src/manifest/action/: encoder.rs  mod.rs  state.rs
src/runtime/: info_parameter.rs  mod.rs  plugin.rs
tests/: plugin_test.rs
(+2 files in other folders)
