[package]
name = "stream_deck"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "plugin_test",
]

[dependencies]
chrono = "0.4.31"
futures-util = "0.3.30"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.18"
thiserror = "1.0.52"
tokio = { version = "1.35.1", features = ["net", "fs", "rt", "sync"] }
tokio-tungstenite = "0.21.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
