[package]
name = "plugin_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
futures-util = "0.3.30"
serde_json = "1.0.110"
stream_deck = { path = ".." }
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tracing = "0.1.40"
log = "0.4.20"
